--- a/app/src/main/res/layout/fragment_events_main.xml
+++ b/app/src/main/res/layout/fragment_events_main.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/events_bg">
+    android:background="@color/transparent">
 
     <FrameLayout
         android:id="@+id/events_main_frame_layout"
