--- a/app/src/main/res/layout/cluster_row_layout.xml
+++ b/app/src/main/res/layout/cluster_row_layout.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="25dp"
-    android:layout_marginTop="35dp"
+    android:layout_marginTop="25dp"
+    android:layout_marginBottom="20dp"
     android:layout_marginEnd="25dp"
     android:gravity="center"
     android:orientation="vertical">
@@ -12,6 +13,7 @@
         android:id="@+id/cluster_image_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
         android:paddingTop="6dp"
         android:paddingBottom="6dp"
         android:background="@drawable/gold_bg_drawable">
@@ -23,16 +25,18 @@
             android:src="@drawable/misc"
             android:scaleType="fitCenter"/>
 
-    </LinearLayout>
+        <TextView
+            android:id="@+id/cluster_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="7dp"
+            android:fontFamily="@font/comfortaa"
+            android:gravity="center_horizontal"
+            android:text="Misc"
+            android:textColor="@color/events_text"
+            android:textSize="20sp" />
 
-    <TextView
-        android:id="@+id/cluster_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="7dp"
-        android:fontFamily="@font/comfortaa"
-        android:text="Misc"
-        android:textColor="@color/events_text"
-        android:textSize="20sp" />
+    </LinearLayout>
 
 </LinearLayout>
