--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,11 +2,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#6f000000">
     <LinearLayout
+        android:layout_marginTop="20dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/darktransparent">
+        android:layout_height="match_parent">
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -21,19 +22,19 @@
                         android:id="@+id/home_hostel_img"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:scaleType="centerCrop"
-                        android:foreground="#af000000"
-                        android:src="@drawable/agate" />
+                        android:src="@drawable/agatelogo" />
                     <TextView
                         android:id="@+id/overall_place"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
                         android:layout_weight="1"
                         android:gravity="center"
+                        android:layout_centerHorizontal="true"
                         android:lines="2"
+                        android:background="#6f000000"
                         android:text="1st\nPlace"
-                        android:textSize="35dp" />
+                        android:textSize="40dp" />
 
                 </RelativeLayout>
 
@@ -43,7 +44,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/hostel_img_parent"
-                    android:layout_marginTop="-75dp"
+                    android:layout_marginTop="0dp"
                     android:orientation="horizontal">
 
                     <androidx.cardview.widget.CardView
@@ -61,9 +62,9 @@
                             <ImageView
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
-                                android:foreground="#af000000"
                                 android:scaleType="fitEnd"
-                                android:src="@drawable/culturals_cup" />
+                                android:src="@drawable/culturals_cup"
+                                android:foreground="#6f000000"/>
 
                             <TextView
                                 android:id="@+id/culturals_place"
@@ -73,8 +74,15 @@
                                 android:layout_weight="1"
                                 android:gravity="center"
                                 android:lines="2"
-                                android:text="Culturals:\n2st"
-                                android:textSize="25dp" />
+                                android:text="2nd"
+                                android:textSize="40dp" />
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_below="@id/culturals_place"
+                                android:text="Culturals"
+                                android:gravity="center"
+                                android:textSize="20dp"/>
 
                         </RelativeLayout>
                     </androidx.cardview.widget.CardView>
@@ -94,7 +102,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:src="@drawable/sports_cup"
-                                android:foreground="#af000000"/>
+                                android:foreground="#6f000000"/>
 
                             <TextView
                                 android:id="@+id/sports_place"
@@ -104,8 +112,15 @@
                                 android:layout_weight="1"
                                 android:gravity="center"
                                 android:lines="2"
-                                android:text="Sports:\n3rd"
-                                android:textSize="25dp" />
+                                android:text="3rd"
+                                android:textSize="40dp" />
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_below="@id/sports_place"
+                                android:text="Sports"
+                                android:gravity="center"
+                                android:textSize="20dp"/>
 
                         </RelativeLayout>
                     </androidx.cardview.widget.CardView>
@@ -124,7 +139,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:src="@drawable/spectrum_cup"
-                                android:foreground="#af000000"/>
+                                android:foreground="#6f000000"/>
 
                             <TextView
                                 android:id="@+id/spectrum_place"
@@ -134,8 +149,15 @@
                                 android:layout_weight="1"
                                 android:gravity="center"
                                 android:lines="2"
-                                android:text="Spectrum:\n1st"
-                                android:textSize="25dp" />
+                                android:text="1st"
+                                android:textSize="40dp" />
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_below="@id/spectrum_place"
+                                android:text="Spectrum"
+                                android:gravity="center"
+                                android:textSize="20dp"/>
 
                         </RelativeLayout>
                     </androidx.cardview.widget.CardView>
