--- a/app/src/main/res/layout/page_1.xml
+++ b/app/src/main/res/layout/page_1.xml
@@ -4,19 +4,21 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:weightSum="6"
     android:background="@color/darkBackground">
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:src="@drawable/aavegwhite"/>
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1.5"
+        android:padding="15dp"
+        android:src="@drawable/aaveglogowhite" />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:text="About Us"
+        android:padding="10dp"
+        android:textAlignment="center"
+        android:layout_weight="4.5"
+        android:text="Aaveg, the ultimate inter-hostel showdown, scheduled to be held on 7th, 8th and 9th of February is a fest to invoke the rawest of talents with the utmost of team spirit. With the hostels competing to secure multiple trophies in the areas of sports, culturals and so on, Aaveg'20, The Abyss, is here to deconstruct reality and rekindle the battlefield."
         app:autoSizeTextType="uniform"
         app:autoSizeMinTextSize="14sp"
         app:autoSizeMaxTextSize="100sp"
@@ -24,11 +26,11 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:padding="10dp"
-        android:layout_weight="4"
-        android:text="Aaveg is NIT Trichy’s one and only inter-hostel battle arena for the first-years. Aaveg is by the first-year students, and for the first-year students. There are 5 cups for which the hostels are pitted against each other: The Sports Cup, where teamwork, skills, along with efforts are essential to gain the trophy. The Culturals Cup, where artists, musicians, and dancers showcase their mastery for this trophy. The Spectrum Cup, where a ton of fun and hard events like JAM, Adzap, and Online Gaming events are held. And finally, The Cheering Cup, that tests the bonds of the hostels, that observes the support the hostels provide while their teams enter the stage! And the hostel with the highest amount of points in the end will win the Overall Cup. So this Aaveg, call upon the Abyss, and LET THE BATTLE BEGIN!"
+        android:layout_weight="0.25"
+        android:text="swipe ->"
+        android:textAlignment="viewEnd"
         app:autoSizeTextType="uniform"
-        app:autoSizeMinTextSize="14sp"
+        app:autoSizeMinTextSize="10sp"
         app:autoSizeMaxTextSize="100sp"
         app:autoSizeStepGranularity="2sp"/>
 
