--- a/app/src/main/res/layout/loginview.xml
+++ b/app/src/main/res/layout/loginview.xml
@@ -94,7 +94,7 @@
                 android:hint="Roll No"
                 android:inputType="number"
                 android:textColor="#FFFFFF"
-                android:textColorHint="#90FFFFFF"
+                android:textColorHint="@drawable/editexthint"
                 android:textSize="18sp"
                 android:textStyle="italic"
                 app:layout_constraintBottom_toTopOf="@+id/et_login_password"
@@ -111,7 +111,7 @@
                 android:gravity="center_vertical"
                 android:hint="Password"
                 android:inputType="textPassword"
-                android:textColorHint="#90FFFFFF"
+                android:textColorHint="@drawable/editexthint"
                 android:textSize="18sp"
                 android:textStyle="italic"
                 app:layout_constraintBottom_toBottomOf="parent"
