--- a/app/src/main/res/drawable/buttoncustom.xml
+++ b/app/src/main/res/drawable/buttoncustom.xml
@@ -1,9 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <solid android:color="#FFF"/>
-    <stroke android:color="#FFF"
-        android:width="3dp"/>
-    <corners android:radius="40dp"/>
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+    android:color="#BDA0CB">
+    <item android:id="@android:id/mask">
+        <shape android:shape="rectangle">
+            <solid android:color="@color/colorPrimaryDark" />
+            <corners android:radius="8dp" />
+        </shape>
+    </item>
 
-</shape>
+    <item android:id="@android:id/background">
+
+        <shape xmlns:android="http://schemas.android.com/apk/res/android"
+            android:shape="rectangle">
+            <solid android:color="#FFF"/>
+            <stroke android:color="#FFF"
+                android:width="3dp"/>
+            <corners android:radius="40dp"/>
+
+        </shape>
+    </item>
+</ripple>
