--- a/app/src/main/res/layout/loginview.xml
+++ b/app/src/main/res/layout/loginview.xml
@@ -41,20 +41,25 @@
     </ImageView>
 
     <TextView
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/loginBanner"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:paddingEnd="40dp"
+        android:paddingBottom="12dp"
+        android:paddingTop="12dp"
+        android:paddingStart="12dp"
+        android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/aaveglogo"
-        android:layout_marginTop="25dp"
-        android:background="#50000000"
+        android:layout_marginTop="24dp"
+        android:layout_marginBottom="32dp"
+        android:id="@+id/loginBanner"
         android:text="LOGIN"
-        android:textSize="30sp"
-        android:paddingTop="8dp"
-        android:paddingBottom="8dp"
-        android:paddingEnd="30dp"
-        android:paddingRight="30dp">
-    </TextView>
+        android:background="#FFF"
+        android:textColor="#000"
+        app:autoSizeTextType="uniform"
+        app:autoSizeMinTextSize="14sp"
+        app:autoSizeMaxTextSize="100sp"
+        app:autoSizeStepGranularity="2sp" />
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
