Change header text color in events

--- a/app/src/main/res/layout/fragment_clusters.xml
+++ b/app/src/main/res/layout/fragment_clusters.xml
@@ -28,7 +28,7 @@
             android:paddingEnd="10dp"
             android:text="Events"
             android:textAllCaps="true"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="23sp"
             android:textStyle="bold" />
 
