--- a/app/src/main/res/layout/page_1.xml
+++ b/app/src/main/res/layout/page_1.xml
@@ -22,7 +22,8 @@
         app:autoSizeTextType="uniform"
         app:autoSizeMinTextSize="14sp"
         app:autoSizeMaxTextSize="100sp"
-        app:autoSizeStepGranularity="2sp"/>
+        app:autoSizeStepGranularity="2sp"
+        android:fontFamily="@font/exo2_regular"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -32,6 +33,7 @@
         app:autoSizeTextType="uniform"
         app:autoSizeMinTextSize="10sp"
         app:autoSizeMaxTextSize="100sp"
-        app:autoSizeStepGranularity="2sp"/>
+        app:autoSizeStepGranularity="2sp"
+        android:fontFamily="@font/exo2_regular"/>
 
 </LinearLayout>
