--- a/app/src/main/res/layout/page_5.xml
+++ b/app/src/main/res/layout/page_5.xml
@@ -19,14 +19,13 @@
         android:padding="10dp"
         android:textAlignment="center"
         android:layout_weight="4.5"
-        android:text="A war torn battleground, everything turned to nothing, castle built from stone turned to hopeful castles in the sky. the Abyss, where you are nothing, and you are everything, where the void consumes you, so you consume everything. Where the stakes are so high that you risk being dissipated into the void unless you turn your enemies into dust instead, victory is essential.
-
-A master swordsman without his sword is easily defeated. Frightening in appresrabce, but only as much as it’s bearer, the very sight of its sharpened spikes have incited fear in the hearts of its targets for centuries. With a hunger for vengeance and a thirst for victory, watch as they lay waste to their battlegrounds.
+        android:text="A master swordsman without his sword is easily defeated. Frightening in appresrabce, but only as much as it’s bearer, the very sight of its sharpened spikes have incited fear in the hearts of its targets for centuries. With a hunger for vengeance and a thirst for victory, watch as they lay waste to their battlegrounds.
 "
         app:autoSizeTextType="uniform"
         app:autoSizeMinTextSize="14sp"
         app:autoSizeMaxTextSize="100sp"
-        app:autoSizeStepGranularity="2sp"/>
+        app:autoSizeStepGranularity="2sp"
+        android:fontFamily="@font/exo2_regular"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -36,6 +35,7 @@ A master swordsman without his sword is easily defeated. Frightening in appresra
         app:autoSizeTextType="uniform"
         app:autoSizeMinTextSize="10sp"
         app:autoSizeMaxTextSize="100sp"
-        app:autoSizeStepGranularity="2sp"/>
+        app:autoSizeStepGranularity="2sp"
+        android:fontFamily="@font/exo2_regular"/>
 
 </LinearLayout>
