--- a/app/src/main/res/layout/page_6.xml
+++ b/app/src/main/res/layout/page_6.xml
@@ -24,7 +24,8 @@ Feel the bonds forged by battles and blood. Witness their brawl with even gods, 
         app:autoSizeTextType="uniform"
         app:autoSizeMinTextSize="14sp"
         app:autoSizeMaxTextSize="100sp"
-        app:autoSizeStepGranularity="2sp"/>
+        app:autoSizeStepGranularity="2sp"
+        android:fontFamily="@font/exo2_regular"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -34,6 +35,7 @@ Feel the bonds forged by battles and blood. Witness their brawl with even gods, 
         app:autoSizeTextType="uniform"
         app:autoSizeMinTextSize="10sp"
         app:autoSizeMaxTextSize="100sp"
-        app:autoSizeStepGranularity="2sp"/>
+        app:autoSizeStepGranularity="2sp"
+        android:fontFamily="@font/exo2_regular"/>
 
 </LinearLayout>
