--- a/app/src/main/res/layout/hostel_events_card.xml
+++ b/app/src/main/res/layout/hostel_events_card.xml
@@ -1,19 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="fill_parent"
     android:id="@+id/hostel_events_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/hostel_events_card"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="150dp"
         app:cardCornerRadius="20dp"
+        app:cardBackgroundColor="#6f000000"
         >
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+            <ImageView
+                android:id="@+id/hostel_events_img"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/gold"
+                android:scaleType="fitXY"/>
             <TextView
                 android:id="@+id/recent_events_card_text"
                 android:layout_width="match_parent"
