--- a/app/src/main/res/layout/layout_single_sponsor.xml
+++ b/app/src/main/res/layout/layout_single_sponsor.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/sponsor_item_parent"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -16,7 +17,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:textColor="#000000"
+        android:textColor="#ffffff"
         tools:text="Official Gifting Partner"
         >
     </TextView>
@@ -39,7 +40,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/iv_sponsors"
         tools:text="Barbeque Nation"
-        android:textColor="#000000"
+        android:textColor="#ffffff"
         >
     </TextView>
 </androidx.constraintlayout.widget.ConstraintLayout>
