Set edit text as number and loader.

--- a/app/src/main/res/layout/loginview.xml
+++ b/app/src/main/res/layout/loginview.xml
@@ -91,7 +91,8 @@
                 android:layout_margin="10dp"
                 android:backgroundTint="#90FFFFFF"
                 android:gravity="center_vertical"
-                android:hint="Webmail USER ID"
+                android:hint="Roll No"
+                android:inputType="number"
                 android:textColor="#FFFFFF"
                 android:textColorHint="#90FFFFFF"
                 android:textSize="18sp"
@@ -108,7 +109,7 @@
                 android:layout_margin="10dp"
                 android:backgroundTint="#90FFFFFF"
                 android:gravity="center_vertical"
-                android:hint="Webmail Password"
+                android:hint="Password"
                 android:inputType="textPassword"
                 android:textColorHint="#90FFFFFF"
                 android:textSize="18sp"
