--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -64,6 +64,7 @@
                             android:gravity="center"
                             android:text="1"
                             android:textColor="#ffffff"
+                            android:fontFamily="@font/gobold_regular"
                             android:textSize="80sp" />
 
                         <TextView
@@ -111,6 +112,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_centerVertical="true"
                                 android:layout_weight="1"
+                                android:fontFamily="@font/gobold_regular"
                                 android:gravity="center"
                                 android:lines="2"
                                 android:text="2nd"
@@ -118,7 +120,7 @@
                             <TextView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:layout_below="@id/culturals_place"
+                                android:layout_alignParentBottom="true"
                                 android:text="Culturals"
                                 android:gravity="center"
                                 android:textSize="20dp"/>
@@ -149,6 +151,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_centerVertical="true"
                                 android:layout_weight="1"
+                                android:fontFamily="@font/gobold_regular"
                                 android:gravity="center"
                                 android:lines="2"
                                 android:text="3rd"
@@ -156,7 +159,7 @@
                             <TextView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:layout_below="@id/sports_place"
+                                android:layout_alignParentBottom="true"
                                 android:text="Sports"
                                 android:gravity="center"
                                 android:textSize="20dp"/>
@@ -185,7 +188,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_centerVertical="true"
-                                android:layout_weight="1"
+                                android:fontFamily="@font/gobold_regular"
                                 android:gravity="center"
                                 android:lines="2"
                                 android:text="1st"
@@ -193,7 +196,7 @@
                             <TextView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:layout_below="@id/spectrum_place"
+                                android:layout_alignParentBottom="true"
                                 android:text="Spectrum"
                                 android:gravity="center"
                                 android:textSize="20dp"/>
