--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,11 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:textViewStyle">@style/ComfortaaTextViewStyle</item>
+    </style>
+
+    <style name="ComfortaaTextViewStyle" parent="android:Widget.TextView">
+        <item name="android:fontFamily">@font/comfortaa</item>
     </style>
 
     <style name="ToolBarStyle" parent="Theme.AppCompat">
