--- a/app/src/main/res/drawable/logoutbutton.xml
+++ b/app/src/main/res/drawable/logoutbutton.xml
@@ -8,12 +8,7 @@
     </item>
 
     <item android:id="@android:id/background">
-        <shape android:shape="rectangle">
-            <solid android:color="#BBFFFFFF" />
-
-            <stroke
-                android:width="2dp"
-                android:color="#33334d" />
-        </shape>
+        <bitmap android:src="@drawable/logout">
+        </bitmap>
     </item>
 </ripple>
