--- a/app/src/main/res/layout/loginview.xml
+++ b/app/src/main/res/layout/loginview.xml
@@ -30,7 +30,7 @@
         android:id="@+id/aaveglogo"
         android:layout_width="0dp"
         android:layout_height="40dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="30dp"
         android:src="@drawable/aaveglogowhite"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -53,7 +53,7 @@
         android:background="#FFF"
         android:maxLines="1"
         android:layout_marginTop="40dp"
-        android:layout_marginBottom="15dp"
+        android:layout_marginBottom="18dp"
         android:paddingRight="10dp"
         android:text="LOGIN"
         android:textAlignment="center"
@@ -72,11 +72,16 @@
         android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginStart="14dp"
+        android:layout_marginEnd="14dp"
+        android:layout_marginTop="8dp"
         app:cardBackgroundColor="#D1000000"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHeight_percent="0.55"
+        app:layout_constraintHeight_percent="0.50"
         app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="20dp">
+        tools:layout_editor_absoluteX="20dp"
+        app:cardCornerRadius="8dp"
+        >
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
