--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,9 +4,32 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#6f000000">
+    <Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/toolbar_main"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@android:color/transparent"
+        android:theme="@style/ToolBarStyle"
+        >
+
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:padding="5dp"
+            app:srcCompat="@drawable/logoutbutton"
+            android:tint="#FFFFFF"
+            android:layout_gravity="end"
+            android:scaleType="centerCrop"
+            android:id="@+id/logout" />
+
+    </Toolbar>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_below="@id/toolbar_main"
+        >
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent">
