--- a/app/src/main/res/layout/hostel_events_card.xml
+++ b/app/src/main/res/layout/hostel_events_card.xml
@@ -8,12 +8,14 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/hostel_events_card"
         android:layout_width="wrap_content"
+        app:cardBackgroundColor="#6f000000"
         android:layout_height="150dp"
         app:cardCornerRadius="20dp"
         >
 
         <RelativeLayout
             android:layout_width="match_parent"
+            android:layout_margin="10dp"
             android:layout_height="match_parent">
             <ImageView
                 android:id="@+id/hostel_events_img"
