Change background to gradient

--- a/app/src/main/res/layout/fragment_choose_hostel.xml
+++ b/app/src/main/res/layout/fragment_choose_hostel.xml
@@ -308,7 +308,7 @@
                     android:layout_gravity="center"
 
                     android:fontFamily="sans-serif-condensed-medium"
-                    android:text="Azurite"
+                    android:text="Opal"
                     android:textSize="18sp"
                     android:textStyle="bold" />
                 <ImageView
