--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -104,10 +104,11 @@
                             android:orientation="vertical">
 
                             <ImageView
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:foreground="#6f000000"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentBottom="true"
                                 android:scaleType="fitEnd"
+                                android:foreground="#6f000000"
                                 android:src="@drawable/culturals_cup" />
 
                             <TextView
@@ -146,10 +147,11 @@
                             android:orientation="vertical">
 
                             <ImageView
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentBottom="true"
                                 android:foreground="#6f000000"
-                                android:src="@drawable/sports_cup" />
+                                android:src="@drawable/sports_cup"/>
 
                             <TextView
                                 android:id="@+id/sports_place"
@@ -183,12 +185,13 @@
 
                         <RelativeLayout
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:orientation="vertical">
+                            android:layout_height="match_parent">
 
                             <ImageView
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentBottom="true"
+                                android:scaleType="fitEnd"
                                 android:foreground="#6f000000"
                                 android:src="@drawable/spectrum_cup" />
 
