Make tab constant color

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -43,6 +43,8 @@
     <color name="event_cobalt">#E13D4A63</color>
     <color name="event_opal">#383838</color>
 
+    <color name="tab">#090404</color>
+
     <color name="tab_agate">#744A06</color>
     <color name="tab_azurite">#8D8B8B</color>
     <color name="tab_bloodstone">#090404</color>
