--- a/app/src/main/res/layout/fragment_culturals.xml
+++ b/app/src/main/res/layout/fragment_culturals.xml
@@ -17,6 +17,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="500dp"/>
             <androidx.recyclerview.widget.RecyclerView
+                android:paddingTop="50dp"
                 android:id="@+id/culturals_standings"
                 android:layout_width="match_parent"
                 android:layout_height="600dp"
