--- a/app/src/main/res/layout/fragment_overall.xml
+++ b/app/src/main/res/layout/fragment_overall.xml
@@ -16,6 +16,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="500dp"/>
             <androidx.recyclerview.widget.RecyclerView
+                android:paddingTop="50dp"
                 android:id="@+id/overall_standings"
                 android:layout_width="match_parent"
                 android:layout_height="600dp"
