--- a/app/src/main/res/layout/page_5.xml
+++ b/app/src/main/res/layout/page_5.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:background="@drawable/bloodstonecard">
+    android:background="@drawable/bloodstone_bg">
 
     <ImageView
         android:layout_width="match_parent"
