--- a/app/src/main/res/layout/layout_single_sponsor.xml
+++ b/app/src/main/res/layout/layout_single_sponsor.xml
@@ -11,7 +11,8 @@
     >
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
+        android:gravity="center"
         android:layout_height="wrap_content"
         android:id="@+id/tv_partner_sponsor_item"
         app:layout_constraintStart_toStartOf="parent"
@@ -19,6 +20,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:textColor="#ffffff"
         tools:text="Official Gifting Partner"
+        android:maxLines="1"
+        android:ellipsize="end"
         >
     </TextView>
 
@@ -33,13 +36,16 @@
     </ImageView>
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:id="@+id/tv_sponsor_name"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/iv_sponsors"
         tools:text="Barbeque Nation"
+        android:maxLines="1"
+        android:ellipsize="end"
         android:textColor="#ffffff"
         >
     </TextView>
