--- a/app/src/main/res/layout/layout_sponsors_fragment.xml
+++ b/app/src/main/res/layout/layout_sponsors_fragment.xml
@@ -5,6 +5,15 @@
     android:layout_height="match_parent"
     android:background="#6f000000">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="36dp"
+        android:text="SPONSORS"
+        android:fontFamily="@font/comfortaa_bold"
+        android:gravity="center"
+        >
+    </TextView>
+
     <androidx.recyclerview.widget.RecyclerView
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
