--- a/app/src/main/res/layout/layout_sponsors_fragment.xml
+++ b/app/src/main/res/layout/layout_sponsors_fragment.xml
@@ -7,7 +7,9 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="36dp"
+        android:layout_height="wrap_content"
+        android:textSize="24sp"
+        android:padding="4dp"
         android:text="SPONSORS"
         android:fontFamily="@font/comfortaa_bold"
         android:gravity="center"
