Make scoreboard tablayout scrollable

--- a/app/src/main/res/layout/fragment_scoreboard.xml
+++ b/app/src/main/res/layout/fragment_scoreboard.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
         app:tabSelectedTextColor="@android:color/white"
+        app:tabMode="scrollable"
         app:tabTextColor="#6fffffff">
     </com.google.android.material.tabs.TabLayout>
     <androidx.viewpager.widget.ViewPager
