Change logout button, and change app name

--- a/app/src/main/res/drawable/logoutbutton.xml
+++ b/app/src/main/res/drawable/logoutbutton.xml
@@ -8,7 +8,7 @@
     </item>
 
     <item android:id="@android:id/background">
-        <bitmap android:src="@drawable/logout">
+        <bitmap android:src="@drawable/logout2">
         </bitmap>
     </item>
 </ripple>
